<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_bg"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@color/color_back"
        android:fontFamily="@font/audiowide"
        android:padding="20dp"
        android:text="@string/app_name"
        android:textColor="@color/yellow"
        android:textSize="48sp" />

    <Button
        android:id="@+id/play_game"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn"
        android:contentDescription="Play game"
        android:fontFamily="@font/audiowide"
        android:text="@string/btn_play_game"
        android:textColor="@color/btn_text"
        android:textSize="24sp" />

    <Button
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn"
        android:contentDescription="Options"
        android:fontFamily="@font/audiowide"
        android:text="@string/btn_options"
        android:textColor="@color/btn_text"
        android:textSize="24sp" />

    <Button
        android:id="@+id/exit_game"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn"
        android:contentDescription="Exit game"
        android:fontFamily="@font/audiowide"
        android:text="@string/btn_exit_game"
        android:textColor="@color/btn_text"
        android:textSize="24sp" />

</LinearLayout>