<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/game_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="323dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/field"
            android:contentDescription="E-mail"
            android:fontFamily="@font/audiowide"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingRight="15dp"
            android:textColor="@color/yellow"
            android:textColorHint="@color/yellow"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/field"
            android:contentDescription="Password"
            android:fontFamily="@font/audiowide"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/yellow"
            android:textColorHint="@color/yellow"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/close_app"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:contentDescription="Exit game"
            android:fontFamily="@font/audiowide"
            android:text="@string/btn_exit_game"
            android:textColor="@color/btn_text"
            android:textSize="24sp" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:contentDescription="Sign In"
            android:fontFamily="@font/audiowide"
            android:text="@string/btn_sign_in"
            android:textColor="@color/btn_text"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>